syntax = "proto3";
package sequencer;

option go_package = "github.com/nathanieltornow/PMLog/sequencer/sequencerpb";

service Sequencer {
  rpc GetOrder(stream OrderRequest) returns (stream OrderResponse);
}

message OrderRequest {
  uint64 Lsn = 1;
  uint32 NumOfRecords = 2;
  uint32 Color = 3;
  uint32 OriginColor = 4;
}

message OrderResponse {
  uint64 Lsn = 1;
  uint32 NumOfRecords = 2;
  uint64 Gsn = 3;
  uint32 Color = 4;
  uint32 OriginColor = 5;
}
